# FCCDetectors

./: .gitlab-ci.yml  CMakeLists.txt
.github/scripts/: load_detector.C  materialScanAxis.sh
.github/workflows/: phoenix.yml  test.yaml  test_spack.yml
Detector/: CMakeLists.txt
Detector/DRcalo/: CMakeLists.txt
Detector/DRsensitive/: CMakeLists.txt
Detector/DetCommon/: CMakeLists.txt
Detector/DetCommon/compact/: FluxDet.xml  FluxMeter.xml  ShieldingTubeAroundBeamPipe.xml
Detector/DetCommon/include/DetCommon/: DetUtils.h  Geant4FluxHit.h  Units.h
Detector/DetCommon/src/: DetUtils.cpp  Geant4FluxHit.cpp  README.md  SimpleLayeredCylinder_geo.cpp  SimpleSensitiveLayeredCylinder_geo.cpp
Detector/DetComponent/: CMakeLists.txt
Detector/DetComponent/src/: SimG4SaveFluxHits.cpp  SimG4SaveFluxHits.h
Detector/DetComponents/: CMakeLists.txt
Detector/DetComponents/src/: SimG4SaveFluxHits.cpp  SimG4SaveFluxHits.h
Detector/DetFCCeeCLD/: CMakeLists.txt
Detector/DetFCCeeCLD/compact/FCCee_o2_v02/: ECalBarrel.xml  ECalEndcap.xml  FCCee_DectDimensions.xml  FCCee_ECalOnly_o2_v02.xml  FCCee_o2_v02.xml  InnerTracker.xml
Detector/DetFCCeeCLD/compact/FCCee_o2_v03/: FCCee_DectDimensions.xml  FCCee_o2_v03.xml  OuterTracker.xml  Vertex.xml
Detector/DetFCCeeCLD/src/: CLD_GenericCalBarrel_o1_v01_geo.cpp
Detector/DetFCCeeCalDiscs/: CMakeLists.txt
Detector/DetFCCeeCalDiscs/compact/: FCCee_EcalEndcaps_coneCryo.xml  FCCee_EcalEndcaps_coneCryo_calibration.xml
Detector/DetFCCeeCommon/: CMakeLists.txt
Detector/DetFCCeeCommon/compact/: Beampipe_noShield.xml  Beampipe_with_notch.xml  Beampipe_with_notch_noShield.xml  FFQuads.xml  FFQuads_sens.xml  SRshielding.xml
Detector/DetFCCeeCommon/src/: LumiCal_o1_v01_geo.cpp
Detector/DetFCCeeECalInclined/: CMakeLists.txt
Detector/DetFCCeeECalInclined/compact/: FCCee_ECalBarrel.xml  FCCee_ECalBarrel_calibration.xml  FCCee_ECalBarrel_deadMaterial.xml  FCCee_ECalBarrel_thetamodulemerged.xml  FCCee_ECalBarrel_thetamodulemerged_calibration.xml  FCCee_ECalBarrel_thetamodulemerged_upstream.xml  FCCee_ECalBarrel_upstream.xml  FCCee_ECalBarrel_v2.xml
Detector/DetFCCeeECalInclined/compact/o1_v01/: FCCee_ECalBarrel.xml  FCCee_ECalBarrel_calibration.xml  FCCee_ECalBarrel_upstream.xml
Detector/DetFCCeeECalInclined/src/: ECalBarrelInclinedFCCee_geo.cpp
Detector/DetFCCeeHCalTile/: CMakeLists.txt
Detector/DetFCCeeHCalTile/compact/: FCCee_HCalBarrel_TileCal.xml  FCCee_HCalEndcaps_ThreeParts_TileCal.xml
Detector/DetFCCeeHCalTile/src/: HCalThreePartsExtBarrel_geo.cpp
Detector/DetFCCeeIDEA/: CMakeLists.txt
Detector/DetFCCeeIDEA-LAr/: CMakeLists.txt
Detector/DetFCCeeIDEA-LAr/compact/: DriftChamber.xml  FCCee_DectDimensions.xml  FCCee_DectMaster.xml  FCCee_DectMaster_thetamodulemerged.xml
Detector/DetFCCeeIDEA/compact/: DriftChamber.xml  DriftChamber_materials.xml  DriftChamber_parameters.xml  FCCee_DectDimensions.xml  FCCee_DectMaster.xml  FCCee_DectMaster_v01.xml  SimplifiedDriftChamber.xml  Vertex.xml
Detector/DetFCCeeIDEA/compact/IDEA_o1_v01/: DriftChamber.xml  DriftChamber_materials.xml  DriftChamber_parameters.xml  FCCee_DectDimensions.xml  FCCee_DectMaster_v01.xml  MuonSystem.xml  PreShower.xml  materials.xml  muonSystem_v00.xml
Detector/DetFCCeeIDEA/src/: DriftChamber.cpp  DriftChamber_o1_v00.cpp  DriftChamber_o1_v01.cpp  Mask_o1_v01_geo.cpp
Detector/DetFCCeeMachine/: CMakeLists.txt
Detector/DetFCCeeMachine/compact/: FCCee_DectMaster.xml
Detector/DetFCCeeMachine/src/: LumiCal_o1_v01_geo.cpp
Detector/DetFCChhBaseline1/: CMakeLists.txt
Detector/DetFCChhCalDiscs/: CMakeLists.txt
Detector/DetFCChhECalInclined/: CMakeLists.txt
Detector/DetFCChhECalInclined/compact/: FCChh_ECalBarrel_Common.xml  FCChh_ECalBarrel_Common_calibration.xml  FCChh_ECalBarrel_Common_upstream.xml
Detector/DetFCChhECalInclined/src/: ECalBarrelInclined_geo.cpp
Detector/DetFCChhECalSimple/: CMakeLists.txt
Detector/DetFCChhECalSimple/src/: ECalBarrel_geo.cpp
Detector/DetFCChhHCalTile/: CMakeLists.txt
Detector/DetFCChhHCalTile/compact/: standalone.xml
Detector/DetFCChhHCalTile/src/: HCalBarrelDetailedWedge_geo.cpp  HCalExtBarrelDetailedWedge_geo.cpp  HCalExtBarrel_geo.cpp
Detector/DetFCChhTailCatcher/: CMakeLists.txt
Detector/DetFCChhTrackerTkLayout/: CMakeLists.txt
Detector/DetFCChhTrackerTkLayout/src/: TkLayoutBarrel_Geo.cpp  TkLayoutEndcap_Geo.cpp
Detector/DetSegmentation/: CMakeLists.txt
Detector/DetSegmentation/include/DetSegmentation/: FCCSWGridModuleThetaMerged.h  FCCSWGridModuleThetaMergedHandle.h  GridTheta.h
Detector/DetSegmentation/src/: FCCSWGridModuleThetaMerged.cpp  GridDriftChamber.cpp  GridEta.cpp  GridRPhiEta.cpp  GridTheta.cpp
Detector/DetSegmentation/src/plugins/: SegmentationFactories.cpp
Detector/DetSensitive/: CMakeLists.txt
Detector/DetSensitive/include/DetSensitive/: AggregateCalorimeterSD.h  BirksLawCalorimeterSD.h  FluxMeter.h  FluxSD.h  FullParticleAbsorptionSD.h  GflashCalorimeterSD.h  SimpleCalorimeterSD.h  SimpleDriftChamber.h  SimpleTrackerSD.h
Detector/DetSensitive/src/: FluxMeter.cpp  FluxSD.cpp  SDWrapper.cpp
Detector/DetTrackerSimple/: CMakeLists.txt
Detector/DetTrackerSimple/compact/: standalone.xml
cmake/: FCCDetectorsConfig.cmake
doc/: LArEcalInclined.md
framework/: CMakeLists.txt
framework/DetComponents/: CMakeLists.txt
framework/DetStudies/: CMakeLists.txt
scripts/: overlap.sh  simulate.sh  teveDisplay.sh
