

add_subdirectory(DetCommon)
add_subdirectory(DetSensitive)
add_subdirectory(DetSegmentation)
add_subdirectory(DetComponent)

add_subdirectory(DetFCChhTailCatcher)
add_subdirectory(DetFCChhHCalTile)
add_subdirectory(DetFCCeeIDEA-LAr)
add_subdirectory(DetFCChhECalSimple)
add_subdirectory(DetFCChhBaseline1)
add_subdirectory(DetTrackerSimple)
add_subdirectory(DetFCChhECalInclined)
add_subdirectory(DetFCCeeECalInclined)
add_subdirectory(DetFCChhTrackerTkLayout)
add_subdirectory(DetFCChhCalDiscs)
add_subdirectory(DetFCCeeCLD)
add_subdirectory(DetFCCeeCommon)
add_subdirectory(DetFCCeeHCalTile)
add_subdirectory(DetFCCeeIDEA)
add_subdirectory(DetFCCeeCalDiscs)
